apps/forgejo/manifests/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-lb
  namespace: forgejo
spec:
  type: LoadBalancer
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
  selector:
    app.kubernetes.io/name: forgejo
  externalIPs:
    - 49.13.118.116
