apps/forgejo/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.xetera.dev`)
      priority: 10
      services:
        - name: forgejo-http
          port: 3000
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    options:
      name: ingress-cloudflare-mtls@kubernetescrd
    secretName: cloudflare-origin-xetera-dev
